--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       content="search, bangs, search engine, search platform, search on different platforms"
     />
     <meta name="author" content="NeoSearch" />
+    <!-- open graph -->
+    <meta property="og:title" content="NeoSearch" />
+    <meta
+      property="og:description"
+      content="NeoSearch allows you to search on different platforms using bangs !"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://neosearch.vercel.app" />
+    <meta property="og:site_name" content="NeoSearch" />
     <!-- image -->
     <meta property="og:image" content="/image.png" />
     <meta property="og:image:width" content="1200" />
